
Fixed bug in logging: Log level could not be set in log4j.properties file.

2759952 (Update fails unless run as admin on Vista): Fixed mis-spelled variable in squirrel-sql.bat which 
caused the application updater to fail to work properly with Windows when UAC is enabled.  Thanks to user
dandar3 for the tip. 


Bug fixes:

3575054: SQL results text mode is not working

Fixed repaint problem in Hibernate Plugin.

Code completion: When selecting a completion by tab, overwriting of subsequent characters does not stop
  only at the next white space but also at .,'();"= characters.


3.4.0 (8/6/2012)
==================

Enhancements:

Hibernate Plugin:
   Improved connection error messaging when creation of a Hibernate SessionFactoryImpl in an external process fails.

Removed misleading button "Remember widths" from Overview Tab

Instead of displaying the file paths in Session tabs a small button is displayed when an open file exists.
  Clicking the button will open a popup menu that gives access to several information and functions concerning the file.

3488629: SQL formatting can be configured. See menu File--> Global Preferences --> Tab SQL formatting

Installer: The DB Copy, DB Diff and Refactoring Plugin have been made standard Plugins.

Graph Plugin: Tables can be selected by rectangle selection like icons on a desktop of modern operating systems.

SQL Execution: The execution panel that is displayed while an SQL statement is being processed is now closeable.
   Before the panel is closed the cancel action gets executed.

Created new Multisource Plugin:
  - Allows SQuirreL to support native multiple source queries where one SQL query spans multiple sources.
  - The plugin supports standard SQL including joins, group by, aggregation, LIMIT, and ordering where tables may come from one or more sources.
  - The plugin will perform function translation where a user requests a function that is not supported on a certain source. 