@@ -27,9 +27,10 @@ public class CodeCompletionTableAliasInfo extends CodeCompletionTableInfo
    private String _toString;
 
    public CodeCompletionTableAliasInfo(TableAliasInfo aliasInfo, boolean useCompletionPrefs, CodeCompletionPreferences prefs)
-	{
-		super(aliasInfo.tableName, "TABLE", null, null, useCompletionPrefs, prefs);
-		_aliasInfo = aliasInfo;
+   {
+      //SH add last parameter ISession. Used in the super class
+      super(aliasInfo.tableName, "TABLE", null, null, useCompletionPrefs, prefs, null);
+      _aliasInfo = aliasInfo;
       _toString = _aliasInfo.aliasName + " (Alias for " + _aliasInfo.tableName + ")";
 	}
 
